--- a/wiki/Description.wiki
+++ b/wiki/Description.wiki
@@ -2,7 +2,7 @@
 #labels Featured
 #sidebar TableOfContents
 
-= Introduction =
+= 1. Introduction =
 
 The *analogues* approach is a novel way of supporting modeled policy recommendations with on-the-ground empirical testing. Analogues refer to sites or years that experience conditions with statistical similarity, primarily in terms of current or future climate, but they can also include additional factors such as soils, crops, and socioeconomic characteristics. This helps link top-down global models with targeted field trials or visits. In essence, the approach locates a site whose climate today is similar to the given future of a place of interest (i.e. where can we find today the future climate of Nairobi, Kenya?), or vice-versa. 
 
@@ -10,16 +10,16 @@ Spatial analogues identify areas whose climate today appears as a likely analogu
 
 Meanwhile, temporal analogues make use of past climates as representative time series of future climate, allowing us to identify historic events that might provide insight into the possible future consequences of climate change. In particular, historical data can show us about past behavioral change and how agricultural communities successfully adapt or fail to do so. These case studies can be analyzed for lessons learned, thus building understanding on the best ways to improve climate resilience or enable adaptation.
 
-= Principle messages =
+= 2. Principle messages =
 
  * Large uncertainties remain regarding future projections of climate, and their resultant impacts on farming systems, especially at the local level.
  * The adaptive capacity of communities is a factor rarely taken into account in the global/regional models on which policy makers often rely
  * The use of climate analogues for locating future climates today can ground models in field-based realities, significantly enhancing our knowledge of adaptation capacity and supporting the identification of appropriate interventions.
 
 
-= Conceptual framework =
+= 3. Conceptual framework =
 
-== The gap in climate science ==
+== 3.1. The gap in climate science ==
 
 Scientific evidence gathered in the last couple of decades suggests that climate conditions are changing rapidly and that this trend will likely continue and even accelerate (IPCC, 2007; Moss et al., 2010).  These anticipated changes in climate baseline, variability and extremes will have far-reaching consequences on agricultural production, posing additional challenges to meeting food security for a growing world population (Lobell et al., 2008; Roudier et al., 2011). Future farming and food systems will face substantial, though different, changes in their environments. Some regions may benefit from more favorable climate conditions to production (the few winners), while others (the larger group of losers) will face increased climate change-related biotic and abiotic stresses (IPCC, 2007). Where conditions improve, the traditional farming systems will be challenged in exploiting the additional production potential, and where conditions deteriorate, accelerated adaptation will be vital, as centuries-old coping mechanisms used by farmers may become insufficient or obsolete for that specific area (Jarvis et al., 2011).  As climate “migrates” between regions, it will disproportionally affect resource-poor and marginalized farmers who have lower adaptive capacities but may depend entirely on agriculture for their livelihoods (Hitz and Smith, 2004; Thornton et al., 2011). Therefore, male and female farmers alike need to enhance their adaptive capacities. Research can help in this effort by improving farmers’ (and scientists’) understanding of climatic projections and adaptation pathways. 
 
@@ -27,7 +27,7 @@ Another major research gap concerns human behavior and cultural, institutional v
 
 Similarly, while substantial research funds and energies have been invested in creating more resilient crop varieties and helping farming communities adopt site-specific adaptive practices, not enough has been done to aggregate inventories of existing local adaptive knowledge  or to facilitate inter-farmer exchange of that knowledge between communities facing similar challenges. 
 
-== Added value ==
+== 3.2. Added value ==
 
 Once analogue sites are identified, information gathered from local field studies or databases can be used and compared to inform further studies or to propose high-potential adaptation pathways. Comparisons between present-day farming systems and their spatial or temporal analogues can be useful in:
 
@@ -36,15 +36,15 @@ Once analogue sites are identified, information gathered from local field studie
  * *Building understanding of human behavior and decision-making:* Development interventions often fail because they lack good diagnoses of rural priorities and decision-making patterns. Village participatory analysis--via consultation with all social groups to understand differentiated needs, skills, perceptions, priorities--will help ensure that researchers’ adaptation strategies actually fit farmers’ needs, cultures, and resources.
  * *Enhancing capacity in a targeted, socially and gender differentiated way:* Local institutions and imbalance of opportunities often marginalize select members or parts of society, e.g. women, whose resource dearth and economic dependencies leave them even more vulnerable to the projected impacts of climate change. Presently, in developing countries, women make up 60% of the world’s hungry population. Without enhancing their adaptive capacities, such inequities and food insecurities will not only persist but will likely worsen. Luckily, some of the most vulnerable also have the highest capacity and agency for change: women make up 60% of the rural workforce, produce 80% of local food, and are primary carers during the crucial early childhood years when food security has its strongest impacts on well-being and development. Farmer-to-farmer visits offer an opportunity to better understand and act on social differentiation, as the creation of climate change adaptation networks can tap into women’s institutions, raise the profile of female innovators, and empower women producers with new strategies to secure food for their families.
 
-= The Climate Analogues tool =
+= 4. The Climate Analogues tool =
 
-== General description ==
+== 4.1. General description ==
 
 The methodology and broad application concept was jointly developed by the Walker Institute at the University of Reading (U.K.), the International Center for Tropical Agriculture (CIAT), and the Climate Impacts Group at the University of Leeds (U.K.), with the support and funding of the CGIAR Research Program on Climate Change, Agriculture and Food Security (CCAFS). The climate analogue tool identifies areas where the climate today corresponds to the future projected climate at another location, or vice-versa (i.e. areas where the future projected climate in one site corresponds to the current climate of other site).  Users specify a location, and a number of climate scenarios. Here, a climate scenario is defined as a combination of period (i.e. 2020, 2030, 2050, etc.), an SRES emissions scenario (IPCC, 2000; Moss et al., 2010), and a Global Climate Model (GCM) (IPCC, 2007; PCMDI, 2007) and described by one or many variables with any time-step (i.e. hourly, daily, monthly, yearly). The projected future climate in this location is then compared to baseline (i.e. current) climates on the basis of geographic domain for which the data exists, using a dissimilarity index based on the variables specified by the user. Measures of dissimilarity can then be exported as either tables or gridded datasets so that they can be later imported into any other statistical or GIS (Geographic Information System) software to then be analyzed and plotted.
 
 The tool is coded entirely as a library for the R environment for statistical computing (R-Development-Core-Team, 2011), which is available at no cost at http://www.r-project.org. It is implemented through raster, rgdal, sp, maps and maptools packages (all available via http://www.r-project.org/), but it also makes use of the stringr, akima, grid and rimage packages (also available at http://www.r-project.org/) in order to permit compatibility, easy exporting of outputs and make an efficient use of the memory at the extent possible with R. The package is being optimized for large datasets with GRASS-GIS, a free open-source GIS package available at http://grass.fbk.eu/, making use of the R package spgrass6. With the climate analogues tool, calculations can be done and outputs generated for any geographic region at any resolution equal to or above 1km; however, depending on the processing power of the computer in which the analyses are being performed, on the spatial resolution and amount of data (i.e. number of climate scenarios, number of time-steps) being analyzed, computational times can range from few seconds to various hours or days. Hence, we strongly suggest users of our package to properly design their experiments to avoid large computational times.
 
-== Methodology ==
+== 4.2. Methodology ==
 
 The climate analogue tool calculates measures of climatic dissimilarity between one site and many others for a pair of climate scenarios. For instance, the tool can calculate the climatic dissimilarity between one site’s future climate and any other site(s) present-day climate, hence answering the question:
 
@@ -63,7 +63,7 @@ The tool is therefore designed to identify areas within a given geographic domai
 We have made use of two different measures of dissimilarity: one we term “CCAFS” dissimilarity, similar to the implementation described in (Williams et al., 2007)and the other we term “Hallegatte” dissimilarity (Hallegatte et al., 2007). Both measures can be used over a variable for which data is available for a number of time-steps (often days or months), though this can be reduced to a growing season of interest.
 
 
-=== CCAFS dissimilarity ===
+=== 4.2.1. CCAFS dissimilarity ===
 
 Future and present climates are described as vectors of _m_ sequential mean values for _v_ variables (_V_) and _v_ weights (_W_). Dissimilarity is then calculated as a weighted Euclidean distance between the variables’ vectors for reference (_f_) and target (_p_) scenario. In the calculation (Eq. 1), each variable difference is weighted (i.e. multiplied) with its corresponding weight; this affects the relative importance of the variable in the dissimilarity value, to account for differences in the scales:
 
@@ -83,7 +83,7 @@ http://ccafs-analogues.googlecode.com/svn/wiki/img/equation4.PNG           _Equa
 
 We use the term ‘dissimilarity’ instead of ‘similarity’ only for the convenience in the scaling of the CCAFS measure: the higher the value, the more dissimilar the pair of sites are for that particular pair of climate scenarios.
 
-=== Hallegatte dissimilarity ===
+=== 4.2.2. Hallegatte dissimilarity ===
 
 Hallegatte et al. (2007) defined a method to identify present analogues for cities' future climates. Projected future climate for a given city is compared to a range of cities' present climates, again defined by vectors of monthly values for a given set of variables with monthly time step. We generalized it to work with any pair of climate scenarios and with variables with any number of time steps (_m_). Again, we define a target (_p_) and reference (_f_) scenario. Analogues in this case are defined as candidate locations with the following three characteristics:
 
@@ -103,17 +103,17 @@ In the original Hallegatte et al. (2007) analysis, they used the first two condi
 
 As Hallegatte et al. (2007) method fails to take into account seasonality by itself we also implemented a lagged search for analogue sites. The method is slightly different than for the CCAFS measure, as in this case we would consider a site as an analogue if at least one of the lagged sequences of m time steps for the given variable meets the selected criteria.
 
-== Technical description ==
+== 4.3. Technical description ==
 
 R is a flexible software package that allows the integration of new features without necessarily modifying the core functions of the software itself. This functionality is provided by means of packages or libraries, which are built based on a basic template. R-packages can incorporate either new methods, functions and can even introduce new concepts (i.e. new object-types or classes). A package often consists of two main components: scripts and documentation. Scripts are R-code files that contain the instructions and commands to be executed, whereas the documentation provides detailed information on what variables, arguments and specific details need to be known when using the functions in the script files. An R-package can “export” one or many functions, and for each “exported” function documentation must necessarily exist. Exported functions or methods are those that the package user can see and use, all others (i.e. not exported) are only running in the background, whenever needed.
 
 The analogues tool is based on the application of the two equations described in Sect. 3.2 on a given structure of data (i.e. an R list). Two types of data can be loaded into R for a given dissimilarity analysis: gridded data (raster objects, from the package raster), and matrices (built-in object in R). These data can be loaded for any variable (V), any weight (W), with any time step (m), and for any combination of climate scenarios (see Sect 3.2). Therefore, users of this tool can analyze dissimilarities over non-climatic variables that are commonly available as one value representing the average of many years (i.e. soil variables), or variables with a different measurement period (i.e. quarterly, yearly bioclimatic indices or 16-day such as the NDVI).
 
-== Analyzing environmental dissimilarity ==
+== 4.4. Analyzing environmental dissimilarity ==
 
 Two types of analyses can be performed with the analogues tool: (1) grid-based and (2) point-based analyses. In the former, one single location is compared with the whole geographic domain. In this case, data for the variables need to be provided as geographic gridded data (i.e. raster datasets) and will be loaded using the available drivers in the R-package ‘rgdal’ and the weights can be provided either as single numbers or again as raster datasets. In the latter, a number of points in a given matrix are compared between them. In this case, data for the variables need to be loaded onto the computer’s memory as matrices and the weights can be provided as single numbers or as matrices in the computer’s memory.
 
-=== Grid-based dissimilarity analysis ===
+=== 4.4.1. Grid-based dissimilarity analysis ===
 
 Two basic inputs are required in the analogues tool for any grid-based dissimilarity analysis: variables and weights. From these two inputs, variables need to be geographic gridded data, and weights can be either geographic gridded data or single values. Any geographic data input into this analysis needs to be of exactly the same spatial resolution, the same geographic coverage (i.e. extent) and needs to be time-consistent (i.e. _m_ must be equal for all these data).
 
@@ -123,14 +123,14 @@ Then the weights are loaded, using the same combination _[climate scenario]-[W]-
 
 The output of this function is a RasterLayer object, with the same geographic characteristics (i.e. resolution, extent) of the input data used to drive the calculation, these data can be further stored in the file system or visualized in R using methods and functions already implemented in the R-package raster.
 
-=== Point-based dissimilarity analysis ===
+=== 4.4.2. Point-based dissimilarity analysis ===
 
 In the case of point-based dissimilarity analysis, variables data need to be already loaded onto memory as matrices; whereas weights can be specified as single numbers else they need to be already loaded onto memory as matrices, as with variables data. These matrices need to have m columns and s rows, where s is the total number of sites being analyzed (from 1 to any number). All matrices need to be of equal dimensions. 
 Data for point-based analyses can exist in any R-readable format within the file system and will need to be loaded beforehand by the user as a variable with the appropriate name. For instance, data can be in comma-separated-values format (.csv), as Fortran-formatted text files (.txt), or as tab-delimited data files (.dat). In all those cases, there are built-in functions in R to read in these data formats.
 
 Once a pair of climate scenarios has been selected, the point-based dissimilarity analysis function in the analogues tool will look for the data for the specified variables within the system’s memory. It is key that the variables are named properly when the data is being loaded (beforehand) by the user, with a combination of _[V].[climate scenario]_, where _V_ is defined in Sect. 3.2 and climate scenario is defined in Sect. 3.1, otherwise the tool will fail finding the data or will take the wrong data.
 
-== Uncertainty quantification ==
+== 4.5. Uncertainty quantification ==
 
 As the analyses explained in section 3.4 can be applied to any combination of climate scenarios, it allows looking at different future predictions when analyzing future-related dissimilarities. Therefore, climate dissimilarity can be looked through a set of future climate projections as done by different GCMs, under one or more emissions scenarios. This allows the possibility of quantifying uncertainties.
 
@@ -138,7 +138,7 @@ Uncertainties can be estimated using different, case-specific measures, so whils
 
 High SD values are associated with high uncertainties, but they are also associated with high values in the target variable; therefore, a site with higher values in the target variable would inevitably have a higher uncertainty (SD) relative to a site with lower values. On the other hand, the CV can be extremely high if the values in the target variables are very close to zero, even if the variability is low. The range among predictions (RE) avoids the problem in scaling but is highly sensitive to outliers; for example, if a certain prediction is 90% concentrated in a small part of the range and there are outliers in the distribution of the values, the RE might be high, but the uncertainty would necessarily be low (as the probability of predicting one single outcome is high). The agreement or stippling (AG), a measure that quantifies the number of model predictions that agree on a given condition partly solves this problem, as it considers the number of cases that agree in the same direction, but fails when the values are evenly distributed and only informs partially on uncertainties, as it does provide a number of agreeing cases, but does not inform on the numerical differences between them.
 
-== Known limitations and future developments ==
+== 4.6. Known limitations and future developments ==
 
 There are several known limitations on the current approach:
 
@@ -158,15 +158,15 @@ The climate analogues team is very keen to collaborate with any other researcher
 
 In the future, the tool will identify temporal analogues in addition to spatial ones—that is, users will be able to identify contemporary analogues for historical climates. Critically, the climate analogue tool will also be available via a web-based platform, with an interface that can receive and process queries.  Such a platform would provide needed insights into crop vulnerability to climate change and support field evaluation of agricultural adaptation options for 2030 and beyond.
 
-== Collaborators ==
+== 4.7. Collaborators ==
 
 Currently, the analogues R-package is being maintained by Johannes Signer, a visiting researcher at the International Center for Tropical Agriculture (CIAT) in Cali, Colombia and Julian Ramirez-Villegas, a researcher at CIAT and PhD student of the School of Earth and Environment at the University of Leeds, UK. However, the development of this package in its present state would not have been possible without the contributions of Dr. Josh Hooker, Prof. Nigel Arnell and Dr. Tom Osborne from the Walker Institute at the University of Reading, UK, who developed the original idea and made possible the coding of core functions within the package.
 
 Eike Luedeling, from the World Agroforestry Centre is also an R-developer with a role in the analogues tool, and Ernesto Giron, a GIS-developer that is implementing the package on an ArcGIS Server web-based interface.
 
-= Future applications =
+= 5. Future applications =
 
-== Proposed actions ==
+== 5.1. Proposed actions ==
 
 To promote more climate-resilient and adaptive production systems, policy-makers, and global development funds should:
 
@@ -176,11 +176,11 @@ To promote more climate-resilient and adaptive production systems, policy-makers
  # Improve understanding of local knowledge and the natural adaptive capacities of farmers, stakeholders (from community level to national planning level), and production systems. 
  # Facilitate knowledge sharing between farming communities, researchers, and development practitioners. In many cases, this will first require holistic inventories of local knowledge. Exchanges can be more effectively targeted using the analogues methodology.
 
-== Trial sites ==
+== 5.2. Trial sites ==
 
 For decades, cultivar testing in trial sites has proven to be an efficient and valuable methodology for varietal improvement and targeted dissemination. However, poor data management and failure to make information publicly accessible has precluded the evaluation of trialed materials and adaptation options across multiple geographies. CCAFS is therefore supporting the establishment of a broad database and online repository of compiled and standardized multi-site trial data. This online platform could be used in conjunction with the climate analogue tool to better understand how crops respond: a) to different climates, or b) to analogue climates in different national settings. In the latter case, the distinct responses of production systems to similar climates could shed light on other sorts of dissimilarities, i.e. in biophysical characteristics or social, economic, and institutional settings. 
 
-= Contacts and development team staff =
+= 6. Contacts and development team =
  
  * Johannes Signer (j.m.signer@gmail.com), Visiting Researcher, International Center for Tropical Agriculture (CIAT), -R developer
  * Julian Ramirez-Villegas (j.r.villegas@cgiar.org), PhD Scholar, School of Earth and Environment, University of Leeds, UK, -R developer
@@ -188,7 +188,7 @@ For decades, cultivar testing in trial sites has proven to be an efficient and v
  * Dr. Andy Jarvis, Senior Scientist, International Center for Tropical Agriculture (CIAT), Project coordinator
 
 
-= References =
+= 7. References =
 
  * Busby, J.R., 1991. BIOCLIM—a bioclimate analysis and prediction system. Plant Protection Quarterly, 6: 8-9.
  * Challinor, A.J., Ewert, F., Arnold, S., Simelton, E. and Fraser, E., 2009. Crops and climate change: progress, trends, and challenges in simulating impacts and informing adaptation. Journal of Experimental Botany, 60(10): 2775-2789.
