--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -2,29 +2,29 @@
 
  * General Information
    * [Description]   
- * Getting started with R
-   * [WhyR Why R?]
-   * [DownloadR Downloading R and R Studio]
-   * [InstallLibraries Installing libraries]
-   * [BasicCalcs Perform basic calculations]
-   * [GeoDataR Use of geographic data in R: raster package]
- * Downloading and formatting weather data
-   * [DataSources Sources of climate data]
-   * [DownUseData Downloading and using these data]
-   * [InterpolateData Interpolation of daily weather data: weatherData package]   
- * The `analogues` R-package
-   * [AnaloguesInstall Installing the analogues package]
-   * [ParamsObject The `params` object and the loading of data]   
-   * [DissimFunction Function `dissimilarity()` and first example analysis]   
-   * [EffectsDirection Understanding the effects of direction]
-   * [EffectsLocation Understanding the effects of location]
-   * [EffectsVariables Understanding the effects of using different variables]
-   * [EffectsLag Understanding the effects of lag]
-   * [EffectsGS Understanding the effects of growing season]
-   * [EffectsScenarios Understanding the effects of using different scenarios]
-   * [ThresholdCCAFS Selecting candidate analogues via thresholding]
-   * [UncertaintyQuant Uncertainty quantification]
-   * [AgroAnalogues Agriculturally meaningful analyses]
+ * 1. Getting started with R
+   * [WhyR 1.1. Why R?]
+   * [DownloadR 1.2. Downloading R and R Studio]
+   * [InstallLibraries 1.3. Installing libraries]
+   * [BasicCalcs 1.4. Perform basic calculations]
+   * [GeoDataR 1.5. Use of geographic data in R: raster package]
+ * 2. Downloading and formatting weather data
+   * [DataSources 2.1. Sources of climate data]
+   * [DownUseData 2.2. Downloading and using these data]
+   * [InterpolateData 2.3. Interpolation of daily weather data: weatherData package]   
+ * 3. The `analogues` R-package
+   * [AnaloguesInstall 3.1. Installing the analogues package]
+   * [ParamsObject 3.2. The `params` object and the loading of data]   
+   * [DissimFunction 3.3. Function `dissimilarity()` and first example analysis]   
+   * [EffectsDirection 3.4. Understanding the effects of direction]
+   * [EffectsLocation 3.5. Understanding the effects of location]
+   * [EffectsVariables 3.6. Understanding the effects of using different variables]
+   * [EffectsLag 3.7. Understanding the effects of lag]
+   * [EffectsGS 3.8. Understanding the effects of growing season]
+   * [EffectsScenarios 3.9. Understanding the effects of using different scenarios]
+   * [ThresholdCCAFS 3.10. Selecting candidate analogues via thresholding]
+   * [UncertaintyQuant 3.11. Uncertainty quantification]
+   * [AgroAnalogues 3.12. Agriculturally meaningful analyses]
  * [IssueReport Reporting bugs, issues or new features]
    
    
